# udacity_robotics_software_engineer

project1-build-my-world/myrobot/: README.md
project1-build-my-world/myrobot/model/building/: model.sdf
project1-build-my-world/myrobot/model/robot/: model.sdf
project1-build-my-world/myrobot/script/: hello.cpp
project1-build-my-world/myrobot/world/: world
project2-go-chase-it/: README.md
project2-go-chase-it/catkin_ws/src/ball_chaser/: CMakeLists.txt  package.xml
project2-go-chase-it/catkin_ws/src/ball_chaser/src/: drive_bot.cpp  process_image.cpp
project2-go-chase-it/catkin_ws/src/my_robot/launch/: world.launch
project2-go-chase-it/catkin_ws/src/my_robot/rviz/: my_world.rviz
project2-go-chase-it/my_ball/: model.sdf
project3-where-am-i/: README.md
project3-where-am-i/catkin_ws/src/my_robot/launch/: amcl.launch  robot_description.launch
project3-where-am-i/catkin_ws/src/my_robot/rviz/: my_world.rviz
project3-where-am-i/catkin_ws/src/my_robot/urdf/: my_robot.xacro
project3-where-am-i/catkin_ws/src/my_robot/worlds/: my_world.world
project4-map-my-world/: README.md
project4-map-my-world/catkin_ws/src/my_robot/: package.xml
project4-map-my-world/catkin_ws/src/my_robot/launch/: localization.launch  mapping.launch  teleop.launch  world.launch
project4-map-my-world/catkin_ws/src/my_robot/urdf/: my_robot.gazebo  my_robot.xacro
project4-map-my-world/catkin_ws/src/my_robot/worlds/: my_world.world
project5-home-service-robot/: README.md
project5-home-service-robot/catkin_ws/src/add_markers/: CMakeLists.txt  package.xml
project5-home-service-robot/catkin_ws/src/add_markers/src/: add_markers.cpp  add_markers_test.cpp
project5-home-service-robot/catkin_ws/src/map/: stage_4.pgm
project5-home-service-robot/catkin_ws/src/pick_objects/: CMakeLists.txt  package.xml
project5-home-service-robot/catkin_ws/src/pick_objects/src/: pick_objects.cpp
project5-home-service-robot/catkin_ws/src/scripts/: add_marker.sh  home_service.sh  launch.sh  pick_objects.sh  test_navigation.sh  test_slam.sh
project5-home-service-robot/catkin_ws/src/turtlebot3/turtlebot3_navigation/launch/: amcl.launch
project5-home-service-robot/catkin_ws/src/turtlebot3/turtlebot3_navigation/rviz/: turtlebot3_navigation.rviz
