<?xml version="1.0"?>
<package format="2">
  <name>add_markers</name>
  <version>0.0.0</version>
  <description>The add_markers package</description>
  <maintainer email="gene@todo.todo">gene</maintainer>
  <license>TODO</license>  

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
</package>
