<?xml version="1.0"?>
<package format="2">
  <name>pick_objects</name>
  <version>0.0.0</version>
  <description>The pick_objects package</description>
  <maintainer email="gene@todo.todo">gene</maintainer>
  <license>TODO</license>  

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>
</package>
